--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "po-235"
+name = "po_235"
 version = "0.1.0"
 description = "Projeto final para a matéria PO-235"
 authors = [
@@ -66,21 +66,15 @@ select = [
     "ANN",
     "S110",
     "S112",
-    "B",
     "A",
-    "COM",
     "T10",
     "G",
-    "PT",
-    "Q",
-    "SIM",
     "ARG",
     "PTH",
-    "ERA",
     "NPY",
 ]
 
-ignore = ["COM812", "D100", "ANN101", "ANN102", "PD901"]
+ignore = ["COM812"]
 
 [tool.ruff.format]
 quote-style = "double"
