--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,8 +46,8 @@ jobs:
       - name: Format check (ruff)
         run: uv run ruff format . --check
 
-      # - name: Run tests + coverage
-      #   run: uv run pytest -q --cov=. --cov-report=term-missing --cov-report=xml
+      - name: Run tests + coverage
+        run: uv run pytest tests/ --cov=models --cov=entrypoints --cov-fail-under=80
 
       - name: Upload coverage.xml (artifact)
         uses: actions/upload-artifact@v4
