--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,6 @@ dependencies = [
     "streamlit == 1.50.0",
     "ruff >= 0.14.1",
     "scikit-learn>=1.7.2",
-    "xgboost>=3.1.1",
     "joblib>=1.5.2",
     "pytest-cov>=7.0.0",
 ]
@@ -78,7 +77,7 @@ select = [
     "NPY",
 ]
 
-ignore = ["COM812"]
+ignore = ["COM812", "F841"]
 
 [tool.ruff.format]
 quote-style = "double"
