--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
     { name = "João Campos", email = "jpl.campos@hotmail.com" }
 ]
 readme = "README.md"
-requires-python = "==3.13.7"
+requires-python = ">=3.11,<3.12"
 
 # ⚠️ IMPORTANTE: Só adicione/modifique dependências se necessário e com aprovação do time
 # Use: uv add <pacote> para adicionar novas dependências
