--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,9 +17,9 @@ jobs:
       - name: Validate branch name
         run: |
           BRANCH_NAME="${GITHUB_HEAD_REF:-${GITHUB_REF_NAME}}"
-          echo "Verificando branch: ${BRANCH_NAME}"
+          echo "Checking branch: ${BRANCH_NAME}"
           if [[ ! "${BRANCH_NAME}" =~ ^(feature|fix|hotfix|release)/.+$ ]]; then
-            echo "❌ Nome de branch inválido: ${BRANCH_NAME}"
+            echo "❌ Invalid branch name: ${BRANCH_NAME}"
             exit 1
           fi
 
@@ -48,27 +48,24 @@ jobs:
 
       - name: Check requirements.txt sync
         run: |
-          echo "Verificando se requirements.txt está sincronizado com pyproject.toml..."
+          echo "Checking if requirements.txt is in sync with pyproject.toml..."
           
-          # Gera requirements.txt temporário
           uv pip compile pyproject.toml -o requirements.txt.tmp --quiet
           
-          # Verifica se existe requirements.txt
           if [ ! -f requirements.txt ]; then
-            echo "❌ requirements.txt não encontrado!"
-            echo "Execute: uv pip compile pyproject.toml -o requirements.txt"
+            echo "❌ requirements.txt not found!"
+            echo "Run: uv pip compile pyproject.toml -o requirements.txt"
             exit 1
           fi
           
-          # Compara os arquivos (ignora comentários e linhas vazias)
           if ! diff <(grep -v '^#' requirements.txt | grep -v '^$' | sort) \
                     <(grep -v '^#' requirements.txt.tmp | grep -v '^$' | sort) > /dev/null; then
-            echo "❌ requirements.txt está desatualizado!"
+            echo "❌ requirements.txt is outdated!"
             echo ""
-            echo "Execute o seguinte comando para atualizar:"
+            echo "Run the following command to update:"
             echo "  uv pip compile pyproject.toml -o requirements.txt"
             echo ""
-            echo "Depois commit e push:"
+            echo "Then commit and push:"
             echo "  git add requirements.txt"
             echo "  git commit -m 'chore: update requirements.txt'"
             echo "  git push"
@@ -76,7 +73,7 @@ jobs:
             exit 1
           fi
           
-          echo "✓ requirements.txt está sincronizado"
+          echo "✓ requirements.txt is in sync"
           rm requirements.txt.tmp
 
       - name: Run tests + coverage
